gen/katoParser.py
# Generated from kato.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class katoParser ( Parser ):

    grammarFileName = "kato.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'let '", "'='", "'func '", "'('", 
                     "','", "')'", "'*'", "'/'", "'+'", "'-'", "'if'", "'else'", 
                     "'return'", "'return '", "'emit '", "'.'", "'true'", 
                     "'false'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "NUMBER", "STRING", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_varDefinition = 2
    RULE_funcDefinition = 3
    RULE_expr = 4
    RULE_variable = 5
    RULE_control = 6
    RULE_if = 7
    RULE_return = 8
    RULE_emit = 9
    RULE_literal = 10
    RULE_scope = 11

    ruleNames =  [ "program", "statement", "varDefinition", "funcDefinition", 
                   "expr", "variable", "control", "if", "return", "emit", 
                   "literal", "scope" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    ID=22
    NUMBER=23
    STRING=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scope(self):
            return self.getTypedRuleContext(katoParser.ScopeContext,0)


        def getRuleIndex(self):
            return katoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = katoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDefinition(self):
            return self.getTypedRuleContext(katoParser.VarDefinitionContext,0)


        def funcDefinition(self):
            return self.getTypedRuleContext(katoParser.FuncDefinitionContext,0)


        def expr(self):
            return self.getTypedRuleContext(katoParser.ExprContext,0)


        def control(self):
            return self.getTypedRuleContext(katoParser.ControlContext,0)


        def getRuleIndex(self):
            return katoParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = katoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 26
                self.varDefinition()
                pass
            elif token in [4]:
                self.state = 27
                self.funcDefinition()
                pass
            elif token in [5, 10, 11, 17, 18, 19, 20, 22, 23, 24]:
                self.state = 28
                self.expr(0)
                pass
            elif token in [12, 14, 15, 16]:
                self.state = 29
                self.control()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 32
            self.match(katoParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(katoParser.VariableContext,0)


        def expr(self):
            return self.getTypedRuleContext(katoParser.ExprContext,0)


        def getRuleIndex(self):
            return katoParser.RULE_varDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDefinition" ):
                listener.enterVarDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDefinition" ):
                listener.exitVarDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDefinition" ):
                return visitor.visitVarDefinition(self)
            else:
                return visitor.visitChildren(self)




    def varDefinition(self):

        localctx = katoParser.VarDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(katoParser.T__1)
            self.state = 35
            self.variable()
            self.state = 36
            self.match(katoParser.T__2)
            self.state = 37
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(katoParser.VariableContext,0)


        def scope(self):
            return self.getTypedRuleContext(katoParser.ScopeContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(katoParser.ExprContext)
            else:
                return self.getTypedRuleContext(katoParser.ExprContext,i)


        def getRuleIndex(self):
            return katoParser.RULE_funcDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDefinition" ):
                listener.enterFuncDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDefinition" ):
                listener.exitFuncDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDefinition" ):
                return visitor.visitFuncDefinition(self)
            else:
                return visitor.visitChildren(self)




    def funcDefinition(self):

        localctx = katoParser.FuncDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(katoParser.T__3)
            self.state = 40
            self.variable()
            self.state = 41
            self.match(katoParser.T__4)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 31329312) != 0):
                self.state = 42
                self.expr(0)
                self.state = 47
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 43
                        self.match(katoParser.T__5)
                        self.state = 44
                        self.expr(0) 
                    self.state = 49
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 50
                    self.match(katoParser.T__5)




            self.state = 55
            self.match(katoParser.T__6)
            self.state = 56
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return katoParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprVarContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a katoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variable(self):
            return self.getTypedRuleContext(katoParser.VariableContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprVar" ):
                listener.enterExprVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprVar" ):
                listener.exitExprVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprVar" ):
                return visitor.visitExprVar(self)
            else:
                return visitor.visitChildren(self)


    class ExprAddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a katoParser.ExprContext
            super().__init__(parser)
            self.lhs = None # ExprContext
            self.op = None # Token
            self.rhs = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(katoParser.ExprContext)
            else:
                return self.getTypedRuleContext(katoParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAddSub" ):
                listener.enterExprAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAddSub" ):
                listener.exitExprAddSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAddSub" ):
                return visitor.visitExprAddSub(self)
            else:
                return visitor.visitChildren(self)


    class ExprCallContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a katoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(katoParser.ExprContext)
            else:
                return self.getTypedRuleContext(katoParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprCall" ):
                listener.enterExprCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprCall" ):
                listener.exitExprCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprCall" ):
                return visitor.visitExprCall(self)
            else:
                return visitor.visitChildren(self)


    class ExprParenContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a katoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(katoParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprParen" ):
                listener.enterExprParen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprParen" ):
                listener.exitExprParen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprParen" ):
                return visitor.visitExprParen(self)
            else:
                return visitor.visitChildren(self)


    class ExprMulDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a katoParser.ExprContext
            super().__init__(parser)
            self.lhs = None # ExprContext
            self.op = None # Token
            self.rhs = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(katoParser.ExprContext)
            else:
                return self.getTypedRuleContext(katoParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprMulDiv" ):
                listener.enterExprMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprMulDiv" ):
                listener.exitExprMulDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprMulDiv" ):
                return visitor.visitExprMulDiv(self)
            else:
                return visitor.visitChildren(self)


    class ExprLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a katoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(katoParser.LiteralContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprLiteral" ):
                listener.enterExprLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprLiteral" ):
                listener.exitExprLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprLiteral" ):
                return visitor.visitExprLiteral(self)
            else:
                return visitor.visitChildren(self)


    class ExprScopeContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a katoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def scope(self):
            return self.getTypedRuleContext(katoParser.ScopeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprScope" ):
                listener.enterExprScope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprScope" ):
                listener.exitExprScope(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprScope" ):
                return visitor.visitExprScope(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = katoParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                localctx = katoParser.ExprVarContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 59
                self.variable()
                pass
            elif token in [10, 11, 17, 18, 19, 23, 24]:
                localctx = katoParser.ExprLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 60
                self.literal()
                pass
            elif token in [20]:
                localctx = katoParser.ExprScopeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 61
                self.scope()
                pass
            elif token in [5]:
                localctx = katoParser.ExprParenContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 62
                self.match(katoParser.T__4)
                self.state = 63
                self.expr(0)
                self.state = 64
                self.match(katoParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 90
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = katoParser.ExprMulDivContext(self, katoParser.ExprContext(self, _parentctx, _parentState))
                        localctx.lhs = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 68
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 69
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==8 or _la==9):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 70
                        localctx.rhs = self.expr(4)
                        pass

                    elif la_ == 2:
                        localctx = katoParser.ExprAddSubContext(self, katoParser.ExprContext(self, _parentctx, _parentState))
                        localctx.lhs = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 71
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 72
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==10 or _la==11):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 73
                        localctx.rhs = self.expr(3)
                        pass

                    elif la_ == 3:
                        localctx = katoParser.ExprCallContext(self, katoParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 74
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 75
                        self.match(katoParser.T__4)
                        self.state = 87
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & 31329312) != 0):
                            self.state = 76
                            self.expr(0)
                            self.state = 81
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                                if _alt==1:
                                    self.state = 77
                                    self.match(katoParser.T__5)
                                    self.state = 78
                                    self.expr(0) 
                                self.state = 83
                                self._errHandler.sync(self)
                                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                            self.state = 85
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if _la==6:
                                self.state = 84
                                self.match(katoParser.T__5)




                        self.state = 89
                        self.match(katoParser.T__6)
                        pass

             
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(katoParser.ID, 0)

        def getRuleIndex(self):
            return katoParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = katoParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(katoParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_(self):
            return self.getTypedRuleContext(katoParser.IfContext,0)


        def return_(self):
            return self.getTypedRuleContext(katoParser.ReturnContext,0)


        def emit(self):
            return self.getTypedRuleContext(katoParser.EmitContext,0)


        def getRuleIndex(self):
            return katoParser.RULE_control

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterControl" ):
                listener.enterControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitControl" ):
                listener.exitControl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitControl" ):
                return visitor.visitControl(self)
            else:
                return visitor.visitChildren(self)




    def control(self):

        localctx = katoParser.ControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_control)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.if_()
                pass
            elif token in [14, 15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.return_()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.emit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.condition = None # ExprContext
            self.then = None # ScopeContext
            self.else_ = None # ScopeContext

        def expr(self):
            return self.getTypedRuleContext(katoParser.ExprContext,0)


        def scope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(katoParser.ScopeContext)
            else:
                return self.getTypedRuleContext(katoParser.ScopeContext,i)


        def getRuleIndex(self):
            return katoParser.RULE_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)




    def if_(self):

        localctx = katoParser.IfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(katoParser.T__11)
            self.state = 103
            self.match(katoParser.T__4)
            self.state = 104
            localctx.condition = self.expr(0)
            self.state = 105
            self.match(katoParser.T__6)
            self.state = 106
            localctx.then = self.scope()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 107
                self.match(katoParser.T__12)
                self.state = 108
                localctx.else_ = self.scope()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(katoParser.ExprContext,0)


        def getRuleIndex(self):
            return katoParser.RULE_return

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn" ):
                listener.enterReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn" ):
                listener.exitReturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)




    def return_(self):

        localctx = katoParser.ReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_return)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.state = 111
                self.match(katoParser.T__13)
                pass
            elif token in [15]:
                self.state = 112
                self.match(katoParser.T__14)
                self.state = 113
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(katoParser.ExprContext,0)


        def getRuleIndex(self):
            return katoParser.RULE_emit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmit" ):
                listener.enterEmit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmit" ):
                listener.exitEmit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmit" ):
                return visitor.visitEmit(self)
            else:
                return visitor.visitChildren(self)




    def emit(self):

        localctx = katoParser.EmitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_emit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(katoParser.T__15)
            self.state = 117
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return katoParser.RULE_literal

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LiteralIntegerContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a katoParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(katoParser.NUMBER)
            else:
                return self.getToken(katoParser.NUMBER, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteralInteger" ):
                listener.enterLiteralInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteralInteger" ):
                listener.exitLiteralInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralInteger" ):
                return visitor.visitLiteralInteger(self)
            else:
                return visitor.visitChildren(self)


    class LiteralStringContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a katoParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(katoParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteralString" ):
                listener.enterLiteralString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteralString" ):
                listener.exitLiteralString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralString" ):
                return visitor.visitLiteralString(self)
            else:
                return visitor.visitChildren(self)


    class LiteralBooleanContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a katoParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteralBoolean" ):
                listener.enterLiteralBoolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteralBoolean" ):
                listener.exitLiteralBoolean(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralBoolean" ):
                return visitor.visitLiteralBoolean(self)
            else:
                return visitor.visitChildren(self)


    class LiteralNumberContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a katoParser.LiteralContext
            super().__init__(parser)
            self.sign = None # Token
            self.left = None # Token
            self.right = None # Token
            self.copyFrom(ctx)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(katoParser.NUMBER)
            else:
                return self.getToken(katoParser.NUMBER, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteralNumber" ):
                listener.enterLiteralNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteralNumber" ):
                listener.exitLiteralNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralNumber" ):
                return visitor.visitLiteralNumber(self)
            else:
                return visitor.visitChildren(self)



    def literal(self):

        localctx = katoParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                localctx = katoParser.LiteralNumberContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10 or _la==11:
                    self.state = 119
                    localctx.sign = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==10 or _la==11):
                        localctx.sign = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()

